Fix button issue on mobile

--- a/src/components/CodeViewer/CodeViewer.module.scss
+++ b/src/components/CodeViewer/CodeViewer.module.scss
@@ -3,19 +3,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
   opacity: 1;
-  transition: opacity 0.75s cubic-bezier(0.24, 0.05, 0.16, 0.97),
-    transform 0.75s cubic-bezier(0.36, 0.02, 0.16, 0.97);
-
-  background-color: rgba(0, 0, 0, 0.55);
 
   &Hidden {
     pointer-events: none;
     user-select: none;
-    opacity: 0;
-    transform: translateX(-10%);
   }
 
   pre {
@@ -33,6 +25,23 @@
   }
 }
 
+.codeContainerWrapper {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.55);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.5s cubic-bezier(0.24, 0.05, 0.16, 0.97),
+    transform 0.5s cubic-bezier(0.36, 0.02, 0.16, 0.97);
+
+  transform: translateY(0);
+
+  &Hidden {
+    pointer-events: none;
+    user-select: none;
+    opacity: 0;
+    transform: translateY(50px);
+  }
+}
+
 .background {
   position: fixed;
   width: 100%;
@@ -42,7 +51,6 @@
   z-index: 15;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: saturate(180%) blur(8px);
-  transition: opacity 0.75s cubic-bezier(0.24, 0.05, 0.16, 0.97);
 
   &Hidden {
     pointer-events: none;
@@ -88,11 +96,10 @@
   left: 50%;
   transform: translateX(-50%);
   opacity: 1;
-  transition: opacity 0.75s cubic-bezier(0.24, 0.05, 0.16, 0.97);
 
   @media screen and (min-width: 767px) {
     top: 120px;
-    width: 90rem;
+    width: 100rem;
   }
 
   &Hidden {
